(many files) add support for chained comparison operators
Prior to this patch code like:

    if ( 1 < $x < 10) { ... }

Would cause a fatal exception:

    syntax error at -e line 1, near "$x <"
    Execution of -e aborted due to compilation errors.

with this patch they behave as expected, that is roughly equivalent to

    if ( 1 < $x && $x < 10 ) { ... }

With the key distinction being that $x (or whatever expression
might be present in its place) will be evaluated exactly once.

--- a/pod/perlop.pod
+++ b/pod/perlop.pod
@@ -76,8 +76,8 @@ values only, not array values.
     left	+ - .
     left	<< >>
     nonassoc	named unary operators
-    nonassoc	< > <= >= lt gt le ge
-    nonassoc	== != <=> eq ne cmp ~~
+    chained 	< > <= >= lt gt le ge
+    chain/na	== != eq ne <=> cmp ~~
     nonassoc    isa
     left	&
     left	| ^
@@ -517,6 +517,39 @@ Binary C<"ge"> returns true if the left argument is stringwise greater
 than or equal to the right argument.
 X<< ge >>
 
+As of Perl 5.32, relational and equality operators can be chained in
+the way that mathematicians would expect. Thus
+
+    if ( 1 < $x < $y == $z < 10 ) { ... }
+
+is legal code that is mathematically equivalent to
+
+    if ( 1 < $x && $x < $y && $y == $z && $z < 10) { ... }
+
+with the only functional difference being that each compared expression
+in the chain is evaluated once, even if it is involved in two comparisons.
+For example consider the expression
+
+    if  ( 1 < expensive_function() < 10 ) { ... }
+
+This would be roughly equivalent to
+
+    my $tmp = expensive_function();
+    if ( 1 < $tmp && $tmp < 10 ) { ... }
+
+with the only difference being that if C<expensive_function()> returned
+a tied scalar its FETCH method would be called exactly once.
+
+The implied AND operators in the chained expression behave similarly
+to the unchained form in terms of short-circuiting, for instance in the
+following example the function C<expensive_function()> will not be called
+as the expression will short circuit immediately after the C<< 1 < $x >>
+has been evaluated to be false.
+
+    $x = 0;
+    if ( 1 < $x < expensive_function() < 10 ) { ... }
+
+
 =head2 Equality Operators
 X<equality> X<equal> X<equals> X<operator, equality>
 
@@ -527,6 +560,18 @@ X<==>
 Binary C<< "!=" >> returns true if the left argument is numerically not equal
 to the right argument.
 X<!=>
+
+Binary C<"eq"> returns true if the left argument is stringwise equal to
+the right argument.
+X<eq>
+
+Binary C<"ne"> returns true if the left argument is stringwise not equal
+to the right argument.
+X<ne>
+
+A sequence of the above equality operators, such as S<C<"$a == $b ==
+$c">>, performs chained comparisons, in the same manner as described in
+the previous section for relational operators.
 
 Binary C<< "<=>" >> returns -1, 0, or 1 depending on whether the left
 argument is numerically less than, equal to, or greater than the right
@@ -545,14 +590,6 @@ X<spaceship>
 (Note that the L<bigint>, L<bigrat>, and L<bignum> pragmas all
 support C<"NaN">.)
 
-Binary C<"eq"> returns true if the left argument is stringwise equal to
-the right argument.
-X<eq>
-
-Binary C<"ne"> returns true if the left argument is stringwise not equal
-to the right argument.
-X<ne>
-
 Binary C<"cmp"> returns -1, 0, or 1 depending on whether the left
 argument is stringwise less than, equal to, or greater than the right
 argument.
@@ -561,6 +598,10 @@ X<cmp>
 Binary C<"~~"> does a smartmatch between its arguments.  Smart matching
 is described in the next section.
 X<~~>
+
+The two-sided ordering operators C<"E<lt>=E<gt>"> and C<"cmp">, and the
+smartmatch operator C<"~~">, are non-associative with respect to each
+other and with respect to the equality operators of the same precedence.
 
 C<"lt">, C<"le">, C<"ge">, C<"gt"> and C<"cmp"> use the collation (sort)
 order specified by the current C<LC_COLLATE> locale if a S<C<use
