Silence test failure by updating AUTHORS.

--- a/AUTHORS
+++ b/AUTHORS
@@ -1004,6 +1004,7 @@ Peter John Acklam              <pjacklam@online.no>
 Peter Liscovius
 Peter Martini                  <PeterCMartini@GMail.com>
 Peter O'Gorman                 <peter@pogma.com>
+Peter Oliver                   <git@mavit.org.uk>
 Peter Prymmer                  <PPrymmer@factset.com>
 Peter Rabbitson                <ribasushi@cpan.org>
 Peter Scott                    <Peter@PSDT.com>
