regcomp.c: Add wrappers for cmplng/xctng wildcard subpatterns
This is in preparation for being called from more than one place.

It has the salubrious effect that the wrapping we do around the user's
supplied pattern is no longer visible in the Debug output of that
pattern.

--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -551,6 +551,11 @@ interpolated into another.  The heuristics previously used have been
 replaced by a reliable method, and hence the diagnostics generated have
 changed.  See L</Diagnostics>.
 
+=item *
+The debug display (say by specifying C<-Dr> or S<C<use re>> (with
+appropriate options) of compiled Unicode propery wildcard subpatterns no
+longer has extraneous output.
+
 =back
 
 =head1 Known Problems
