Updates to perldelta
(manually cherry picked from commit a1e5b70092f67a00e1c13c834de719a887462e36)

--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -367,6 +367,10 @@ printf() or sprintf() with the C<%n> format could cause a panic on
 debugging builds, or report an incorrectly cached length value when
 producing C<SVfUTF8> flagged strings. [#17221]
 
+=item *
+
+A memory leak in regular expression patterns has been fixed [#17218].
+
 =back
 
 =head1 Known Problems
