--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -371,6 +371,14 @@ producing C<SVfUTF8> flagged strings. [#17221]
 
 A memory leak in regular expression patterns has been fixed [#17218].
 
+=item *
+
+Fix MYMALLOC (PERL_MALLOC) build on Windows
+
+=item *
+
+read beyond buffer in grok_inf_nan [L<GH #17370|https://github.com/Perl/perl5/issues/17370>]
+
 =back
 
 =head1 Known Problems
