Update perldelta for all changes from v5.31.7 to v5.31.8
(manually cherry picked from commit 87fd4a59bee543256aa6ddf01070af77ec3b11ca)

--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -379,6 +379,12 @@ Fix MYMALLOC (PERL_MALLOC) build on Windows
 
 read beyond buffer in grok_inf_nan [L<GH #17370|https://github.com/Perl/perl5/issues/17370>]
 
+=item *
+
+Fix an assertion failure in the regular expression engine.
+
+[L<GH #17372|https://github.com/Perl/perl5/issues/17372>]
+
 =back
 
 =head1 Known Problems
